--- a/pages/mensagens.html
+++ b/pages/mensagens.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
- 
+
 </head>
 
 <body>
@@ -68,16 +68,14 @@
         </br>
         <div class="titulo">
             <div class="title js">
-                <h2>Deus usa imperfeitos para Sua Obra !</h2>
+                <h2>ESCOLHA SEU LADO !</h2>
             </div>
         </div>
         </br>
         <div class="versiculo js">
 
-            <h1 class="biblia">"E disse-lhe Pedro: Ainda que todos se escandalizem, nunca, porém, eu. Respondeu-lhe
-                Jesus: Em verdade vos digo que hoje, nesta noite, antes que duas vezes cante o galo, tu me negarás três
-                vezes. Mas ele disse com mais veemência: Ainda que me seja necessário morrer contigo, de modo nenhum te
-                negarei. E da mesma maneira diziam todos também." </br>Marcos 14:29-31 </h1>
+            <h1 class="biblia">"... como, pois, faria eu este tamanho mal e pecaria contra Deus?" </br>Genêsis 39 : 9
+            </h1>
         </div>
 
         </br>
@@ -86,41 +84,46 @@
         <div class="texto">
             <div class="reflection">
 
-                <p class="page3"> O relato bíblico nos mostra o como Deus realiza Sua Obra através de pessoas como eu e
-                    você, homens e mulheres imperfeitos, carentes da Graça maravilhosa que nos levanta e redime. </p>
+                <p class="page3"> A história de José por vários ângulos é uma trajetória de determinação, superação,
+                    aprendizado, humildade e amor! </p>
                 </br>
+                <p class="page3">Gostaria de refletir um pouco sobre o ângulo da DETERMINAÇÃO. O texto de Gn 39.9: "...
+                    como, pois, faria eu este tamanho mal e pecaria contra Deus?", nos mostra que mesmo em situações
+                    extremas o melhor caminho é da Obediência ao Senhor... </p>
                 </br>
-                <p class="page3">Pedro era um homem cheio de imperfeições, era afobado, falava o que vinha ao coração
-                    sem medir as consequências... Apesar de todas esses problemas, Pedro foi um dos discípulos de Jesus
-                    que mais atuou em Sua Igreja. Com certeza, ele teve que aprender com seus dilemas, podemos ver isso
-                    no seu encontro com Cornélio(At. 10) e sua atitude de se lançar com amor no alvo de servir, fez com
-                    que a sua vida fosse um instrumento poderoso nas mãos do Senhor! </p>
+                <p class="page3">José após viver o abandono e raiva dos seus irmãos, sozinho em terra estranha(o Egito),
+                    vendido como escravo e sem qualquer elo ainda com sua família(não podemos esquecer que ele
+                    possivelmente era o único a exercer a fé no Senhor verdadeiro no meio da idolatria no Egito),
+                    mantém-se firme apesar de todos os fatores apontados acima, não se deixando levar pela
+                    circunstância, necessidade física/sexual do momento. </p>
                 </br>
+                <p class="page3">Quero fazer uma provocação sobre isso: Qual de nós culparia a José se ele tivesse
+                    sucumbido aos desejos físicos da mulher de Potifar e aos instintos humanos em relação à sexualidade?
+                </p>
+                <p class="page3"> José era humano e portanto cheio de desejos, vontades e por tudo o que passou com sua
+                    família e seu momento como escravo, com certeza era mais vulnerável a cair e "chutar o balde"....
+                </p>
                 </br>
-                <p class="page3">Muitas vezes olhamos para nossos pecados e imperfeições e achamos que não temos
-                    qualquer valor para a Obra de Deus, nos achamos tão indignos que escolhemos nos esconder e pensar
-                    que não podemos ser usados pelo Senhor. </p>
+                <p class="page3">A sexualidade sempre foi uma arma de Satanás para fazer o homem cair em pecado, Adão e
+                    Eva teve como primeira percepção após o pecado, o fato de estarem nus, Davi em um momento de
+                    relaxamento, pois deveria estar na Guerra, não conseguiu ser forte diante da beleza e nudez de
+                    Bateseba, Salomão deixou que seus amores, e foram muitos, carregassem seu coração para a idolatria,
+                    a sensualidade da sua enteada, fez com que Herodes mandasse matar João Batista, entre outros
+                    exemplos! </p>
                 </br>
+                <p class="page3"> Acredito que Satanás vendo a situação de José e querendo tirar ele do plano que Deus
+                    tinha para sua vida (Gn 37.8,9) coloca diante dele uma situação que seria triunfante para um coração
+                    vacilante, mas José se manteve firme pois ele olhava para Deus e tinha um coração que sabia em qual
+                    lado estar e por isso ele não caiu. </p>
                 </br>
-                <p class="page3">Toda a história bíblica é de um Deus que usa pessoas como eu e você para que Seus alvos
-                    sejam alcançados, o agir e efetuar vem do Senhor(Fl 2.13), como também a capacitação para que Seus
-                    propósitos sejam estabelecidos. O que o Senhor quer de nós é que busquemos sua face e deixemos ele
-                    operar em nossas vidas o Seu poder.</p>
+                <p class="page3">Qual o lado que você está, qual tem sido a sua resposta aos apelos do inimigo para que
+                    você desista da sua fé?</p>
                 </br>
+                <p class="page3">Escolha seu lado!! </p>
                 </br>
-                <p class="page3">Ele quer nos usar e sabe de nossas limitações(conhece a história de Moisés?), não
-                    devemos limitar a ação do Senhor em nossas vidas pela incredulidade, precisamos entender que somos
-                    importantes para o Senhor e ele nos ama e nos envolve com Sua maravilhosa graça e perdão, e isso é
-                    maravilhoso, saber que Ele nos conhece e nos ama de forma extraordinária!! </p>
+                <p class="page3">" Assim, porque és morno, e não és frio nem quente, vomitar-te-ei da minha boca". Ap. 3.16</p>
                 </br>
-                </br>
-                <p class="page3"> Você é importante para Deus e não importa como as pessoas te vêem, importa como Deus
-                    te vê! Que Deus te abençoe ricamente!!! </p>
-                </br>
-                </br>
-                <p class="page3">Pr. Lúcio do Amaral</p>
-
-
+                
             </div>
         </div>
 
