--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <a href="pages/contribua.html" class="selectable_button">Contribua</a>
                 </li>
 
+                <li>
+                    <a href="pages/fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -86,7 +89,7 @@
 
         <div class="about_us">
 
-            <div class="title js">
+            <div class="title">
                 <h2>SOBRE NÓS</h2>
             </div>
 
@@ -108,7 +111,7 @@
         </div>
 
         <div class="schedules ">
-            <div class="title js">
+            <div class="title">
                 <h2>HORÁRIOS</h2>
             </div>
             </br>
@@ -133,7 +136,7 @@
         </div>
 
         <div class="contact">
-            <div class="title js">
+            <div class="title">
                 <h2>CONTATOS</h2>
             </div>
             </br>
