--- a/pages/contribua.html
+++ b/pages/contribua.html
@@ -61,6 +61,10 @@
                 <li>
                     <a href="contribua.html" class="selectable_button" id="contribua">Contribua</a>
                 </li>
+
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -72,7 +76,7 @@
         <div class="titulo">
 
             <div class="local">
-                <div class="title js">
+                <div class="title">
                     <h2>CONTRIBUA COM AMOR</h2>
                 </div>
             </div>
@@ -84,7 +88,7 @@
             </h1>
         </div>
          
-        <div class="pix js">
+        <div class="pix">
             <div class="title">
                 <h2>PIX</h2>
             </div>
