--- a/pages/devocionais.html
+++ b/pages/devocionais.html
@@ -59,6 +59,10 @@
                 <li>
                     <a href="contribua.html" class="selectable_button">Contribua</a>
                 </li>
+
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -67,7 +71,7 @@
         </br>
         </br>
         <div class="titulo">
-            <div class="title js">
+            <div class="title">
                 <h2>DEVOCIONAIS</h2>
             </div>
         </div>
@@ -78,7 +82,7 @@
             </h1>
         </div>
 
-        <div class="video js">
+        <div class="video">
             <video src="/Vídeos/video2.mp4" controls class="video_pastoral"></video>
         </div>
 
