--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -66,6 +66,10 @@
                 <li>
                     <a href="contribua.html" class="selectable_button">Contribua</a>
                 </li>
+
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -74,16 +78,16 @@
     <div class="container_fotos">
         </br>
         </br>
-        <div class="titulo js">
+        <div class="titulo">
 
 
-            <div class="title js">
+            <div class="title">
                 <h2>NOSSA IGREJA</h2>
             </div>
 
 
         </div>
-        <div class="title2 js">
+        <div class="title2">
             <h3 class="h3">Deus é bom o tempo todo !</h3>
             </br>
 
