--- a/pages/localização.html
+++ b/pages/localização.html
@@ -61,6 +61,10 @@
                 <li>
                     <a href="contribua.html" class="selectable_button">Contribua</a>
                 </li>
+
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -72,7 +76,7 @@
         <div class="titulo">
 
             <div class="local">
-                <div class="title js">
+                <div class="title">
                     <h2>ENCONTRE-NOS</h2>
                 </div>
             </div>
