--- a/pages/mensagens.html
+++ b/pages/mensagens.html
@@ -58,6 +58,10 @@
                 <li>
                     <a href="contribua.html" class="selectable_button">Contribua</a>
                 </li>
+
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -67,7 +71,7 @@
         </br>
         </br>
         <div class="titulo">
-            <div class="title js">
+            <div class="title">
                 <h2>ESCOLHA SEU LADO !</h2>
             </div>
         </div>
