--- a/pages/historia.html
+++ b/pages/historia.html
@@ -60,6 +60,9 @@
                 <li>
                     <a href="contribua.html" class="selectable_button">Contribua</a>
                 </li>
+                <li>
+                    <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
+                </li>
             </ul>
         </nav>
 
@@ -71,7 +74,7 @@
         </br>
 
         <div class="titulo">
-                <div class="title js">
+                <div class="title">
                     <h2>NOSSA HISTÓRIA</h2>
                 </div>
         </div>
@@ -88,7 +91,7 @@
         </div>
 
         <div class="texto">
-            <div class="history js">
+            <div class="history">
 
                 </br>
                 <p class="page2"> No dia <span class="bold">06 de março de 2004</span> se inicia a história da <span
