Subindo a aba "Fale Conosco"

--- a/pages/fale_conosco.html
+++ b/pages/fale_conosco.html
@@ -31,7 +31,7 @@
 
 
         <button id="btn" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false"
-            class="botaozinho">Fotos<span class="tiras"></span></button>
+            class="botaozinho">Fale Conosco<span class="tiras"></span></button>
 
 
 
@@ -75,7 +75,7 @@
 
     </header>
 
-   
+   <div class="container">
         </br>
         </br>
         <div class="titulo">
@@ -117,19 +117,17 @@
 
 
 
-  
+    </div>
     <footer class="footer">
         <p class="page1">"Eu sou a videira verdadeira, e meu Pai é o agricultor. Todo ramo que, estando em mim,
             não der fruto, ele o corta; e todo o que dá fruto limpa, para que produza mais fruto ainda."
 
             </br>João 15:1-2 ARA</p>
-
-
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/script.js"></script>
 </body>
-
 </html>
