Atualizando fotos do retiro e Mensagem de Natal

--- a/pages/mensagens.html
+++ b/pages/mensagens.html
@@ -72,13 +72,13 @@
         </br>
         <div class="titulo">
             <div class="title">
-                <h2>ESCOLHA SEU LADO !</h2>
+                <h2>Natal, boas novas de grande alegria !</h2>
             </div>
         </div>
         </br>
         <div class="versiculo js">
 
-            <h1 class="biblia">"... como, pois, faria eu este tamanho mal e pecaria contra Deus?" </br>Genêsis 39 : 9
+            <h1 class="biblia">"... é que hoje vos nasceu, na cidade de Davi, o Salvador, que é Cristo, o Senhor." </br>Lucas 2 : 11 - ARA
             </h1>
         </div>
 
@@ -88,46 +88,165 @@
         <div class="texto">
             <div class="reflection">
 
-                <p class="page3"> A história de José por vários ângulos é uma trajetória de determinação, superação,
-                    aprendizado, humildade e amor! </p>
+                <p class="page3"> Papai Noel começou a existir, segundo a tradição, na pessoa de São Nicolau, bispo de
+                    Mira, na Ásia Menor, no século IV d.C. Ele, segundo a tradição, foi um homem bondoso, que gostava
+                    muito das crianças, principalmente das pobres, a quem dava presentes. Essa figura mais tarde
+                    imortalizou-se num símbolo, que recebeu o nome de Papai Noel. </p>
                 </br>
-                <p class="page3">Gostaria de refletir um pouco sobre o ângulo da DETERMINAÇÃO. O texto de Gn 39.9: "...
-                    como, pois, faria eu este tamanho mal e pecaria contra Deus?", nos mostra que mesmo em situações
-                    extremas o melhor caminho é da Obediência ao Senhor... </p>
+                <p class="page3">O tempo passou e um mito tomou o lugar de uma pessoa, Papai Noel tomou o lugar de
+                    Cristo. O Natal foi paganizado e secularizado. O sentido do Natal mudou. Até o Papai Noel mudou. O
+                    Papai Noel moderno é um mito, uma lenda, uma criação do comércio voraz. No início ele era a
+                    personificação do amor, das dádivas generosas. Hoje, ele virou garoto propaganda. Antes, ele era
+                    discreto, hoje, vive desfilando em carros alegóricos para provocar o apetite consumista da
+                    freguesia. Antes, ele dava presentes, hoje, vende presentes.</p>
                 </br>
-                <p class="page3">José após viver o abandono e raiva dos seus irmãos, sozinho em terra estranha(o Egito),
-                    vendido como escravo e sem qualquer elo ainda com sua família(não podemos esquecer que ele
-                    possivelmente era o único a exercer a fé no Senhor verdadeiro no meio da idolatria no Egito),
-                    mantém-se firme apesar de todos os fatores apontados acima, não se deixando levar pela
-                    circunstância, necessidade física/sexual do momento. </p>
+                <p class="page3">O Papai Noel foi concebido no ventre do consumismo materialista. Ele está a serviço do
+                    espírito mercantilista. Ele virou comerciante inveterado. O velho bojudo e barbado, de vestes
+                    vermelhas e com um grande saco nas costas, só traz alegria e presentes para as crianças que têm
+                    dinheiro. Ele passa longe das crianças pobres. Ele não se aproxima dos meninos de rua. Ele se
+                    transformou num comerciante sedento de lucro, num camelô inveterado, num símbolo do consumismo
+                    insaciável. </p>
                 </br>
-                <p class="page3">Quero fazer uma provocação sobre isso: Qual de nós culparia a José se ele tivesse
-                    sucumbido aos desejos físicos da mulher de Potifar e aos instintos humanos em relação à sexualidade?
+                <p class="page3">O Papai Noel de hoje é uma caricatura do espírito natalino; ele está na contra mão do
+                    sentido do Natal.
                 </p>
-                <p class="page3"> José era humano e portanto cheio de desejos, vontades e por tudo o que passou com sua
-                    família e seu momento como escravo, com certeza era mais vulnerável a cair e "chutar o balde"....
+                <p class="page3"> José e Maria não encontraram lugar em Belém. A cidade estava lotada e as hospedarias
+                    indisponíveis. A hora de Jesus nascer havia chegado, e por não ter encontrado espaço entre os homens
+                    para nascer, nasceu numa estrebaria, um abrigo de animais.
                 </p>
                 </br>
-                <p class="page3">A sexualidade sempre foi uma arma de Satanás para fazer o homem cair em pecado, Adão e
-                    Eva teve como primeira percepção após o pecado, o fato de estarem nus, Davi em um momento de
-                    relaxamento, pois deveria estar na Guerra, não conseguiu ser forte diante da beleza e nudez de
-                    Bateseba, Salomão deixou que seus amores, e foram muitos, carregassem seu coração para a idolatria,
-                    a sensualidade da sua enteada, fez com que Herodes mandasse matar João Batista, entre outros
-                    exemplos! </p>
+                <p class="page3">O Filho de Deus, o Rei dos reis não nasceu num palácio, mas numa manjedoura. Aquele que
+                    é o criador e dono do mundo não nasceu num berço de ouro, mas num berço de palha. Aquele que dirige
+                    os céus e a terra e cujo governo está sob seus ombros esvaziou-se e tornou-se um infante. </p>
                 </br>
-                <p class="page3"> Acredito que Satanás vendo a situação de José e querendo tirar ele do plano que Deus
-                    tinha para sua vida (Gn 37.8,9) coloca diante dele uma situação que seria triunfante para um coração
-                    vacilante, mas José se manteve firme pois ele olhava para Deus e tinha um coração que sabia em qual
-                    lado estar e por isso ele não caiu. </p>
+                <p class="page3"> Naquela noite em Belém, nasceu o Sol da justiça. O anjo de Deus desceu do céu e
+                    anunciou aos pastores que guardavam seus rebanhos: "Não temais, eis que vos trago boa nova de grande
+                    alegria: é que hoje vos nasceu na cidade de Davi, o Salvador, que é Cristo, o Senhor" (Lc 2.11).
+                </p>
                 </br>
-                <p class="page3">Qual o lado que você está, qual tem sido a sua resposta aos apelos do inimigo para que
-                    você desista da sua fé?</p>
+                <p class="page3">A mensagem natalina que vem do céu tem sua centralidade não nos anjos nem em Maria, nem
+                    no papai Noel, nem nos enfeites que brilham nas cidades nesta época, mas em Jesus.
+                </p>
                 </br>
-                <p class="page3">Escolha seu lado!! </p>
+                <p class="page3">Três verdades são aqui destacadas: </p>
                 </br>
-                <p class="page3">" Assim, porque és morno, e não és frio nem quente, vomitar-te-ei da minha boca". Ap. 3.16</p>
+                <p class="page3"> 1 ª = Jesus é o Salvador - "... é que hoje vos nasceu, na cidade de Davi, o
+                    Salvador..." (Lc 2.11).</p>
                 </br>
-                
+                <p class="page3">Importante notarmos que :
+                </p>
+                </br>
+                <p class="page3">1.1- Deus cumpre a sua Palavra. Jesus deveria nascer em Belém, à cidade de Davi. Para
+                    isso Deus moveu todo o império romano, a fim de que um recenseamento fosse feito. Com isso, a jovem
+                    Maria que estava grávida em Nazaré, na Galiléia, subiu para as montanhas de Belém, na Judéia, porque
+                    José era belemita e deveria alistar-se em sua cidade natal. A Palavra de Deus não pode falhar. A
+                    profecia deveria se cumprir.
+                </p>
+                </br>
+                <p class="page3">1.2- Jesus foi anunciado pelo anjo como o Salvador. Ele recebeu o nome de Jesus
+                    exatamente porque veio para salvar o seu povo de seus pecados. Ele nos salva não pelo seu exemplo
+                    nem pelos seus ensinos, mas pela sua morte. Ele nasceu para morrer. Ele nasceu como sacrifício. Ele
+                    nasceu como o Cordeiro que tira o pecado do mundo. Ele nasceu como nosso substituto. Ele carregou em
+                    seu corpo o nosso pecado. Ele deu sua vida por nós. Ele foi ferido e traspassado pelas nossas
+                    iniqüidades, a fim de recebermos o dom da vida eterna.
+                </p>
+                </br>
+                <p class="page3">2ª = Jesus é o Cristo - "... que é Cristo..." (Lc 2.11).
+                </p>
+                </br>
+                <p class="page3">O Salvador é o Cristo. Ele é o Messias prometido. Sua vinda não foi acidental. Sua
+                    vinda não foi de improviso. Sua vinda foi planejada na eternidade e prometida na história. Os
+                    patriarcas falaram de sua vinda. As profecias apontaram para a sua vida. Todo o Velho Testamento foi
+                    uma preparação para a sua vinda.
+                </p>
+                </br>
+                <p class="page3">Os sacrifícios no tabernáculo e no templo eram sombras do seu sacrifício perfeito. O
+                    Messias é o centro da eternidade. É o centro da Bíblia. É o centro da história. Ele é a figura
+                    central nos decretos de Deus. Ele é a figura central da igreja. Ele é a figura central no céu.
+                </p>
+                </br>
+                <p class="page3">Tudo é dele, por meio dele e para ele. Ele é o Alfa e o Ômega da redenção. Todas as
+                    coisas do tempo e da eternidade convergem para ele. Todas as coisas nele subsistem. Ele é o Cristo,
+                    o Messias, o desejado de todas as nações.
+                </p>
+                </br>
+                <p class="page3">3ª = Jesus é o Senhor - "... o Senhor" (Lc 2.11).
+                </p>
+                </br>
+                <p class="page3">Jesus é o Salvador, o Messias e também o Senhor. Ele é o Rei dos reis e o Senhor dos
+                    senhores. Todos os poderes do universo estão sob seu governo. Ele está à destra de Deus Pai e tem o
+                    livro da história em suas onipotentes mãos. Ele governa as nações e reina sobranceiro e absoluto
+                    sobre sua igreja. Ele recebeu o nome que é sobre todo o nome e diante dele todo joelho se dobra no
+                    céu, na terra e debaixo da terra.
+                </p>
+                </br>
+                <p class="page3">Aquela criança que nasceu em Belém tem o cetro do universo. Ele é maior do que César.
+                    Ele é maior do que os reis deste mundo. Ele é o soberano do universo. Diante dele todos os reis
+                    precisam se dobrar. Aos seus pés todos precisam depositar suas coroas. Precisamos conhecer o Jesus
+                    do Natal. Ele é o Salvador do mundo. Ele é o Messias de Deus. Ele é o Senhor do universo. Ele tem as
+                    rédeas da história em suas mãos.
+                </p>
+                </br>
+                <p class="page3"> <span class=bold>Conclusão</span>
+                </p>
+                </br>
+                <p class="page3">Muito mais do que se lembrar de um velhinho com barba branca distribuindo presentes
+                    segurando a sua barriga grande e dizendo: oh!oh!oh! Devemos nos lembrar de um homem que viveu apenas
+                    33 anos aqui na terra, que guando foi morrer disse: “está consumado!” e isto pra dá o maior presente
+                    que alguém pode receber que é a salvação e assim a vida eterna.
+                </p>
+                </br>
+                <p class="page3">Muito mais do que enfeitarmos nossas casas, ruas e cidades com luzes piscando, é
+                    sabermos que tipo de luz temos dentro de nós, por que quando ele esteve entre nós disse que nós
+                    deveríamos ser “luz do mundo”.
+                </p>
+                </br>
+                <p class="page3">Mais do que ser apenas na época de natal um tempo de confraternização e de um
+                    sentimento de amor, deveria ser sim um momento para pensarmos que não deveria ser apenas um dia, mas
+                    em todos os 365 dias do ano.
+                </p>
+                </br>
+                <p class="page3">Mais do que ser uma época em que se enfeitam árvores natalinas, deveria ser sim um
+                    tempo de reflexão e pensarmos se estamos enxertados na videira verdadeira que é Jesus, na qual o
+                    agricultor é Deus.
+                </p>
+                </br>
+                <p class="page3">Mais do que um tempo de ceias de natal e enchermos a barriga, deveríamos dizer se
+                    estamos dispostos a comer o pão que ele comeu e bebermos a água que ele bebeu.
+                </p>
+                </br>
+                <p class="page3">O conteúdo do Natal é salvação. O espírito do Natal é doação. É Deus se fazendo homem,
+                    o rico se fazendo pobre, o senhor se fazendo servo. Natal é dádiva de amor. O Natal é para todos. O
+                    Natal é Jesus.
+                </p>
+                </br>
+                <p class="page3">Papai Noel é um intruso, é uma farsa, uma mentira, um roubador de cena. Os holofotes
+                    precisam estar colocados sobre Jesus e não sobre ele. Jesus é o dono, o sentido e a razão do Natal.
+                    Natal sem Jesus é festa pagã. Natal sem Jesus é festa gastronômica. Natal sem Jesus é apenas
+                    mercantilismo vazio.
+                </p>
+                </br>
+                <p class="page3">Precisamos recristianizar o Natal. Precisamos democratizar o Natal. O Natal são boas
+                    novas de grande alegria e de salvação para o todo o povo. Pobres e ricos podem comemorá-lo de igual
+                    modo!
+                </p>
+                </br>
+                <p class="page3">Precisamos devolver o Natal ao seu legítimo dono. Precisamos dar a glória devida a
+                    Jesus e fazer dele o centro do Natal. Precisamos comemorar o Natal com uma celebração festiva ao rei
+                    Jesus, que nasceu numa manjedoura, viveu como carpinteiro, morreu numa cruz, mas ressuscitou
+                    gloriosamente, para oferecer-nos o banquete da salvação.
+                </p>
+                </br>
+                <p class="page3">Que prevaleça a verdade sobre o mito!
+                </p>
+                </br>
+            </br>
+        </br>
+                <p class="page3">Extraído da Revista Ultimato - <a href="https://www.ultimato.com.br/comunidade-conteudo/natal-boas-novas-de-grande-alegria" target="_blank">https://www.ultimato.com.br/comunidade-conteudo/natal-boas-novas-de-grande-alegria</a>
+                </p>
+                </br>
+
+
             </div>
         </div>
 
