--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -106,54 +106,44 @@
         <div class="centralizadinho">
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
+
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 54.jpeg" alt="Terceiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto2 (2).jpeg" alt="Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 53.jpeg" alt="Segundo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto3.jpeg" alt="Segundo Slide">
                     </div>
                     <div class="carousel-item active">
-                        <img class="w-100 carousel-image" src="/Img/Foto 52.jpeg" alt="Primeiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto4.jpeg" alt="Terceiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 55.jpeg" alt="Quarto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto5.jpeg" alt="Quarto Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 57.jpeg" alt="Décimo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto6.jpeg" alt="Quinto Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 58.jpeg" alt="Décimo Segundo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto7.jpeg" alt="Sextp Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 56.jpeg" alt="Décimo Quarto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto8.jpeg" alt="Sétimo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 26.jpeg" alt="Décimo Quinto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto9.jpeg" alt="Oitavo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class=" w-100 carousel-image" src="/Img/Foto 27.jpeg" alt="Décimo Sexto Slide">
+                        <img class=" w-100 carousel-image" src="/Img/Foto10.jpeg" alt="Nono Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 48.jpeg" alt="Quinto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto11.jpeg" alt="DécimoSlide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 47.jpeg" alt="Sexto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto12.jpeg" alt="Décimo Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 43.jpeg" alt="Sétimo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto13.jpeg" alt="Décimo Segundo Slide">
                     </div>
-                    <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 42.jpeg" alt="Oitavo Slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 41.jpeg" alt="Nono Slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 21.jpeg" alt="Décimo Primeiro Slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto 28.jpeg" alt="Décimo Terceiro Slide">
-                    </div>
+
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
