Revertendo teste anterior

--- a/pages/mensagens.html
+++ b/pages/mensagens.html
@@ -72,7 +72,7 @@
         </br>
         <div class="titulo">
             <div class="title">
-                <h2>DOG Natal, boas novas de grande alegria !</h2>
+                <h2>Natal, boas novas de grande alegria !</h2>
             </div>
         </div>
         </br>
