Subindo mais fotos no site

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -141,9 +141,24 @@
                         <img class="w-100 carousel-image" src="/Img/Foto12.jpeg" alt="Décimo Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto13.jpeg" alt="Décimo Segundo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto13.jpeg" alt="Décimo Terceiro Slide">
                     </div>
-
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto18.jpeg" alt="Décimo Oitavo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto14.jpeg" alt="Décimo Quarto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto15.jpeg" alt="Décimo Quinto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto16.jpeg" alt="Décimo Sexto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto17.jpeg" alt="Décimo Sétimo Slide">
+                    </div>
+                    
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
