--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -96,7 +96,7 @@
         </br>
         <div class="versiculo js">
 
-            <h1 class="biblia">"As misericórdias do Senhor são a causa de não sermos consumidos, porque as suas
+            <h1 class="biblia">"As misericórdias do Senhor são a causa de não sermos .consumidos, porque as suas
                 misericórdias não têm fim; Novas são cada manhã; grande é a tua fidelidade." Lm 3:22,23 </h1>
         </div>
         </br>
