Barra de Cookies concluída

--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 
     </div>
     </div>
+    <!-- Barra de Cookies -->
+  <div id="cookie-bar" class="cookie-bar">
+    <p>Utilizamos cookies para melhorar sua experiência. Ao continuar navegando, você aceita o uso de cookies.</p>
+    <button id="accept-cookies">Aceitar</button>
+  </div>
+
     <footer class="footer">
         <p class="page1">"Eu sou a videira verdadeira, e meu Pai é o agricultor. Todo ramo que, estando em mim,
             não der fruto, ele o corta; e todo o que dá fruto limpa, para que produza mais fruto ainda."
