--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -183,6 +183,11 @@
 
 
     </div>
+    <!-- Barra de Cookies -->
+  <div id="cookie-bar" class="cookie-bar">
+    <p>Utilizamos cookies para melhorar sua experiência. Ao continuar navegando, você aceita o uso de cookies.</p>
+    <button id="accept-cookies">Aceitar</button>
+  </div>
 
     <footer class="footer">
         <p class="page1">"Eu sou a videira verdadeira, e meu Pai é o agricultor. Todo ramo que, estando em mim,
