subindo a aba Boletim

--- a/pages/localização.html
+++ b/pages/localização.html
@@ -65,6 +65,9 @@
                 <li>
                     <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
                 </li>
+                <li>
+                    <a href="boletim.html" class="selectable_button" >Boletim</a>
+                </li>
             </ul>
         </nav>
 
