--- a/pages/fale_conosco.html
+++ b/pages/fale_conosco.html
@@ -70,6 +70,9 @@
                 <li>
                     <a href="fale_conosco.html" class="selectable_button" id="fale_conosco">Fale Conosco</a>
                 </li>
+                <li>
+                    <a href="boletim.html" class="selectable_button">Boletim</a>
+                </li>
             </ul>
         </nav>
 
