--- a/pages/mensagens.html
+++ b/pages/mensagens.html
@@ -62,6 +62,9 @@
                 <li>
                     <a href="fale_conosco.html" class="selectable_button">Fale Conosco</a>
                 </li>
+                <li>
+                    <a href="boletim.html" class="selectable_button">Boletim</a>
+                </li>
             </ul>
         </nav>
 
