--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <li>
                     <a href="pages/fale_conosco.html" class="selectable_button">Fale Conosco</a>
                 </li>
+                <li>
+                    <a href="boletim.html" class="selectable_button">Boletim</a>
+                </li>
             </ul>
         </nav>
 
