concertando o referencial do boletim na página index

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="pages/fale_conosco.html" class="selectable_button">Fale Conosco</a>
                 </li>
                 <li>
-                    <a href="boletim.html" class="selectable_button">Boletim</a>
+                    <a href="pages/boletim.html" class="selectable_button">Boletim</a>
                 </li>
             </ul>
         </nav>
